Bug 845837:  Don't use our dynamic updating for relative positioning on inner table frames, which don't do relative positioning at all.  r=ehsan

This is somewhat evil, but should get us back into the state we were in
before.  There are probably other bugs lurking here as well, though,
related to other cases where we don't support relative positioning.  We
really just need to make our relative positioning support more general.